--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ nutshell: Making coding fun and inclusive with Clojure
 
 description: |
   (A free workshop encouraging greater inclusivity into the Clojure community.  We support those new to programming up to developers new to Clojure. The interactive code snippets are powered by <a href="https://github.com/viebel/klipse">Klipse</a>.)
-
+baseurl: clojurebridge-curriculum
 sass:
-  sass_dir: assets/css
+  sass_dir: clojurebridge-curriculum/assets/css
   style: compressed
 markdown: kramdown
 exclude:
